--- a/home.html
+++ b/home.html
@@ -3,12 +3,12 @@
 
 <header>
     <meta charset="utf-8">
-    <title>Winnies's Fitness</title>
+    <title>Winnies's World</title>
 
-    <!-- <link href="https://fonts.googleapis.com/css?family=Merriweather:400i|Open+Sans&display=swap" rel="stylesheet"> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway:ital,wght@1,500&display=swap" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Fredoka+One&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=EB+Garamond&family=Permanent+Marker&display=swap"
         rel="stylesheet">
+
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -53,25 +53,22 @@
                         <div class=" bar d-md-flex d-block flex-row mx-sm-auto mx-0">
                             <div class=" collapse navbar-collapse" id="navbarSupportedContent">
 
-                                <ul class="navbar-nav ml-auto">
+                                <ul class="navbar-nav ml-auto margin-right: auto">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/home">Home</a>
+                                        <a class="nav-link" href="home.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/story">Story</a>
+                                        <a data-target="#myModalS" data-toggle="modal" class="nav-link"
+                                            href="myModalS">Story</a>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/mission">Mission</a>
+                                        <a data-target="#myModalM" data-toggle="modal" class="nav-link"
+                                            href="myModalM">Mission</a>
                                     </li>
 
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link" href="/contact">Contact</a>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="#">Call or Text</a>
-                                            <a class="dropdown-item" href="#">Email</a>
-                                        </div>
+                                        <a class="nav-link" href="tel:908-456-0440">Contact</a>
                                     </li>
                                 </ul>
                             </div>
@@ -81,7 +78,7 @@
             </div>
         </div>
         <div class="video_container" .playback>
-            <video controls muted>
+            <video playsinline autoplay muted>
                 <source src="videos/5secs.mp4" type=video/mp4>
             </video>
         </div>
@@ -95,75 +92,191 @@
 
 <!-- Feature Section -->
 
-<section class="feature-section">
-    <h1 class="featureTitleH1">Certified Trainer In</h1>
+<section class="feature-section" id="features">
+    <h1 class="featureTitleH1">Certified Training</h1>
     <div class="container-fluid">
         <div class="row">
             <div class="feature-box col-lg-4">
                 <a class="feature-elements" title="">
-                    <a href="https://www.nytimes.com/guides/well/beginner-yoga">
+                    <a href="sc.html">
                         <img class="feature-pics" src="images/genfitness.jpg" alt="">
-                        <h1 class="featureH1">Strength & Conditioning</h1>
-                        <br>
                     </a>
+                    <h1 class="featureH1">Strength & Conditioning</h1>
                 </a>
             </div>
 
-            <div class="feature-box col-lg-4"">
-        <a class=" feature-elements" title="">
-                <img class="feature-pics" src="images/kettlebell.jpeg" alt="">
-                <h1 class="featureH1">Kettlebell Training</h1>
-                <br>
-
+            <div class="feature-box col-lg-4">
+                <a class=" feature-elements" title="">
+                    <a href="kb.html">
+                        <img class="feature-pics" src="images/kettlebell.jpeg" alt="">
+                    </a>
+                    <h1 class="featureH1">Kettlebell Training</h1>
                 </a>
             </div>
 
-            <div class="feature-box col-lg-4"">
+            <div  class="feature-box col-lg-4"">
         <a class=" feature-elements" title="">
-                <img class="feature-pics" src="images/pregnant.jpg" alt="">
+                <a href="em.html">
+                    <img class="feature-pics" src="images/pregnant.jpg" alt="">
+                </a>
                 <h1 class="featureH1">Expecting Mothers</h1>
-                <br>
                 </a>
             </div>
         </div>
     </div>
 </section>
 
+<!-- Pricing Section -->
+<section class="pricing-section">
 
-<!-- Reviews Section -->
-
-<!-- <section class="review-section">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="19000">
-            <div class="carousel-inner">
-                <div class="carousel-item active container-fluid">
-                    <h2>Winnie's workouts are intense! I love them</h2>
-                    <em>Mo</em>
+    <h1 class="pricingH1">Pricing</h1>
+    <div class="price-row row">
+        <div class="pricing-column col-lg-4 md-6">
+            <div class="card">
+                <div class="card-header">
+                    <h3>I come to You</h3>
                 </div>
-                <div class="carousel-item container-fluid">
-                    <h2>If you want a great trainer, look no further!</h2>
-                    <em>Larry</em>
-                </div>
-                <div class="carousel-item container-fluid">
-                    <h2>My self confidence has grown since Winnie started training me</h2>
-                    <em>Curly</em>
+                <div class="card-body">
+                    <h2 class="price-text">$40 / hr</h2>
+                    <p>Must provide a safe location</p>
+                    <p>58 cents per mile outside 07083</p>
+                    <form class="formbtn">
+                        <button class="btnOutl btn btn-lg btn-block btn-outline-dark" formaction="tel:314-330-1290">Call
+                            or Text</button>
+                    </form>
+                    <form class="formbtn">
+                        <button class="btn btn-lg btn-block btn-dark"
+                            formaction="mailto:ritcheytmj@att.net?subject=feedback">Email</button>
+                    </form>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
-    </section> -->
+
+        <div class="pricing-column col-lg-4 md-6">
+            <div class="card">
+                <div class="card-header">
+                    <h3>You come to Me</h3>
+                </div>
+                <div class="card-body">
+                    <h2 class="price-text">$40 / hr</h2>
+                    <p>Equipment will be Provided</p>
+                    <p>You will need bring a Training Mat</p>
+                    <form class="formbtn">
+                        <button class="btn btn-lg btn-block btn-dark" formaction="tel:314-330-1290">Call or
+                            Text</button>
+                    </form>
+                    <form class="formbtn">
+                        <button class="btnOutl btn btn-lg btn-block btn-outline-dark"
+                            formaction="mailto:ritcheytmj@att.net?subject=feedback">Email</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="h pricing-column col-lg-4 md-6">
+            <div id="highlightcard" class="card">
+                <div class="card-header">
+                    <h3>Virtual Training</h3>
+                    <h1 class="hlh1">COMING SOON!</h1>
+                </div>
+                <div class="card-body">
+                    <h2 class="price-text">$30 / hr</h2>
+                    <p>Discount Pricing</p>
+                    <p>Must have required Software</p>
+                    <form class="formbtn">
+                        <button class="btnOutl btn btn-lg btn-block btn-outline-dark" formaction="tel:314-330-1290">Call
+                            or Text
+                        </button>
+                    </form>
+                    <form class="formbtn">
+                        <button class="btn btn-lg btn-block btn-dark"
+                            formaction="mailto:ritcheytmj@att.net?subject=feedback">Email</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+        Launch demo modal
+    </button>
+
+    <!-- Modal -->
+    <div id="myModalS" class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title" id="exampleModalLongTitle">My Story</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in,
+                        egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
+
+                        Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel
+                        augue laoreet rutrum faucibus dolor auctor.
+
+                        Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque
+                        nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.
+
+                        Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in,
+                        egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
+                    </p>
+                    <img src="images/yoga2.jpg" alt="Snow" style="width:100%;max-width:300px">
+                </div>
+                <div class="modal-footer">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="myModalM" class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title" id="exampleModalLongTitle">My Mission</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>UFC FIT Live! brings the energy of UFC GYM’s signature classes into your home. Dynamic workouts
+                        are led by top coaches. Sync your calendar and tune in live at your convenience.
+                        <br>
+                        <br>
+                        A healthy lifestyle includes more than the gym. Gain access to our partner platform, with meal
+                        planning capabilities and exclusive supplement discounts.
+                        <br>
+                        <br>
+                        No matter your goal, Group Fitness has a class for you. Popular mainstream programs are combined
+                        with a unique UFC GYM twist, resulting in a variety of choices to fit your preferred training
+                        style. From Spin to Yoga and more, find your fit.
+                        <br>
+                        <br>
+                        Yoga, Pilates, Barre and Tai-Chi fused into one flow. Set to motivating music, you will lengthen
+                        and strengthen from head to toe..
+                    </p>
+                    <img src="images/Lunges.png" alt="Snow" style="width:100%;max-width:300px">
+                </div>
+                <div class="modal-footer">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
 
 <!-- Footer -->
 
-<footer class="blue-section" id="footer">
+<footer id="footer">
     <div class="container-fluid">
-        <p>©Copyright 2020 Winnie Miiro</p>
+        <p>©Copyright 2020 Winnie's World LLC</p>
     </div>
 </footer>
 
