--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Winnies's Fitness</title>
+  <title>Winnies's World</title>
 
-  <!-- <link href="https://fonts.googleapis.com/css?family=Merriweather:400i|Open+Sans&display=swap" rel="stylesheet"> -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway:ital,wght@1,500&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Fredoka+One&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=EB+Garamond&family=Permanent+Marker&display=swap" rel="stylesheet">
 
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
 
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -33,11 +31,9 @@
   <script>
     $(document).ready(function () {
       $("#h1-title1").animate({
-        // 'font-size' : '40px',
         'opacity': '1'
       }, 1000);
       $("#h1-title2").delay(500).animate({
-        // 'font-size' : '40px',
         'opacity': '1'
       }, 1000);
       $("h4").delay(1000).animate({
@@ -49,7 +45,6 @@
         'opacity': '1'
       }, 400);
       $("#h1-titleLg2").delay(3000).animate({
-        // 'font-size': '10.5rem',
         'opacity': '1'
       }, 1000);
     });
@@ -58,7 +53,7 @@
 
 <body>
 
-  <h1>Hello</h1>
+
 
   <!--TopSocialMedia -->
   <section class="top-section">
