--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <header>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Winnies's World</title>
 
     <link
