--- a/home.html
+++ b/home.html
@@ -36,22 +36,13 @@
 <body>
 
 
-
-
-    <!--topHome Section -->
-
-    <!-- <div class="row"> -->
-    <!-- <div class="col-lg-6"> -->
-    <section class="silver-sec">
+    <!-- Title Section -->
+    <section class="title-section">
         <h2 class="h2-title">Winnie's World</h2>
-        <!-- </div> -->
-
     </section>
 
 
-    <section class="topHome-section">
-        <!-- <div class="col-lg-6"> -->
-        <!-- <div class="container"> -->
+    <section class="nav-section">
         <div class="nav-container container">
             <nav class="navbar navbar-expand-lg navbar-dark bg-#08B0DD">
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -82,11 +73,9 @@
                     </div>
                 </div>
         </div>
+        </nav>
     </section>
-    </nav>
-    <!-- </div> -->
-    <!-- </div> -->
-    <!-- </div> -->
+
     <div class="video_container" .playback>
         <video playsinline autoplay muted>
             <source src="videos/5secs.mp4" type=video/mp4>
@@ -110,6 +99,7 @@
                             <img class="feature-pics" src="images/genfitness.jpg" alt="">
                         </a>
                         <h1 class="featureH1">Strength & Conditioning</h1>
+                        <hr>
                     </a>
                 </div>
 
@@ -119,20 +109,24 @@
                             <img class="feature-pics" src="images/kettlebell.jpeg" alt="">
                         </a>
                         <h1 class="featureH1">Kettlebell Training</h1>
+                        <hr>
                     </a>
                 </div>
 
                 <div class="feature-box col-lg-4"">
-        <a class=" feature-elements" title="">
+                    <a class=" feature-elements" title="">
                     <a href="em.html">
                         <img class="feature-pics" src="images/pregnant.jpg" alt="">
                     </a>
                     <h1 class="featureH1">Expecting Mothers</h1>
+                    <hr>
                     </a>
                 </div>
             </div>
         </div>
     </section>
+
+
 
     <!-- Pricing Section -->
     <section class="pricing-section">
@@ -158,8 +152,10 @@
                                 formaction="mailto:winniem142@yahoo.com?subject=feedback">Email</button>
                         </form>
                     </div>
+                    <br>
                 </div>
             </div>
+            <br>
 
             <div class="pricing-column col-lg-4 md-6">
                 <div class="card">
@@ -176,11 +172,13 @@
                         </form>
                         <form class="formbtn">
                             <button class="btnOutl btn btn-lg btn-block btn-outline-dark"
-                                formaction="mailto:ritcheytmj@att.net?subject=feedback">Email</button>
+                                formaction="mailto:winniem142@yahoo.com?subject=feedback">Email</button>
                         </form>
                     </div>
+                    <br>
                 </div>
             </div>
+            <br>
 
             <div class="h pricing-column col-lg-4 md-6">
                 <div id="highlightcard" class="card">
@@ -200,7 +198,7 @@
                         </form>
                         <form class="formbtn">
                             <button class="btn btn-lg btn-block btn-dark"
-                                formaction="mailto:ritcheytmj@att.net?subject=feedback">Email</button>
+                                formaction="mailto:winniem142@yahoo.com?subject=feedback">Email</button>
                         </form>
                     </div>
                 </div>
