--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
     $(document).ready(function () {
-      $("#h1-title1").animate({
+      $("#h1-intro1").delay(500).animate({
         'opacity': '1'
       }, 1000);
-      $("#h1-title2").delay(500).animate({
+      $("#h1-intro2").delay(800).animate({
         'opacity': '1'
       }, 1000);
-      $("h4").delay(1000).animate({
+      $("h4").delay(1200).animate({
         'font-size': '2rem',
         'opacity': '1'
       }, 400);
-      $("#h1-titleLg1").delay(2000).animate({
+      $("#h1-introLg1").delay(2200).animate({
         'font-size': '10.5rem',
         'opacity': '1'
       }, 400);
-      $("#h1-titleLg2").delay(3000).animate({
+      $("#h1-introLg2").delay(3400).animate({
         'opacity': '1'
       }, 1000);
     });
@@ -55,20 +55,20 @@
 
 
 
-  <!--TopSocialMedia -->
-  <section class="top-section">
+  <!--Intro section -->
+  <section class="intro-section">
     <section class="container-fluid">
-      <section class="title row">
+      <section class="intro row">
         <div class="col-lg-6">
-          <img class="bannerImg" src="images/banner4.jpg" alt="">
+          <img class="intoImg" src="images/banner4.jpg" alt="">
         </div>
-        <div class="title col-lg-6">
-          <div id="div4" class="center-title">
-            <h1 id="h1-title1" class="h1-title">Winnie's</h1>
-            <h1 id="h1-title2" class="h1-title">World</h1>
-            <h4 class="h4-title">dot</h4>
-            <h1 id="h1-titleLg1">WORK</h1>
-            <h1 id="h1-titleLg2"><a href="home.html" style="text-decoration: none;">Let's GO!</a></h1>
+        <div class="intro col-lg-6">
+          <div id="div4" class="center-intro">
+            <h1 id="h1-intro1" class="h1-intro">Winnie's</h1>
+            <h1 id="h1-intro2" class="h1-intro">World</h1>
+            <h4 class="h4-intro">dot</h4>
+            <h1 id="h1-introLg1">WORK</h1>
+            <h1 id="h1-introLg2"><a href="home.html" style="text-decoration: none;">Let's GO!</a></h1>
           </div>
         </div>
       </section>
