--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 
 <header>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Winnies's World</title>
+    <title>Winnie's World</title>
 
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=EB+Garamond&family=Permanent+Marker&display=swap"
