--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <!-- jQurery Scripts -->    
+    <!-- jQurery Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="video.js" charset="utf-8"></script>
 
@@ -82,13 +82,31 @@
         <video class="video" id="bVideo" muted loop>
             <source src="videos/5secs.mp4" type=video/mp4>
         </video>
-        <div id="playButton" class="playButton" onclick="playPause()"></div>
+        <div id="playButton" class="playButton" onclick="playPause(); toggleFullscreen()"></div>
     </div>
-    
+
+
+    <!-- <script>
+        /* Get the element you want displayed in fullscreen */
+        var elem = document.getElementById("myvideo");
+
+        /* Function to open fullscreen mode */
+        function openFullscreen() {
+            if (elem.requestFullscreen) {
+                elem.requestFullscreen();
+            } else if (elem.mozRequestFullScreen) { /* Firefox */
+                elem.mozRequestFullScreen();
+            } else if (elem.webkitRequestFullscreen) { /* Chrome, Safari & Opera */
+                elem.webkitRequestFullscreen();
+            } else if (elem.msRequestFullscreen) { /* IE/Edge */
+                elem.msRequestFullscreen();
+            }
+        }
+    </script> -->
 
 
 
-        <!-- <div class="video-wrapper">
+    <!-- <div class="video-wrapper">
           <video class="video" id="bVideo" loop controls>
             <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4" />
           </video>
