--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
   <section class="intro-section">
     <section class="container-fluid">
       <section class="intro row">
-        <div class="col-lg-6">
-          <img class="intoImg" src="images/banner4.jpg" alt="">
+        <div class="col-xxl-8">
+          <img class="introImg" src="images/intropic.jpg" alt="">
         </div>
-        <div class="intro col-lg-6">
+        <div class="intro col-xl-4">
           <div id="div4" class="center-intro">
             <h1 id="h1-intro1" class="h1-intro">Winnie's</h1>
             <h1 id="h1-intro2" class="h1-intro">World</h1>
