--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         'opacity': '1'
       }, 400);
       $("#h1-introLg1").delay(2200).animate({
-        'font-size': '10.5rem',
+        'font-size': '8vmax',
         'opacity': '1'
       }, 400);
       $("#h1-introLg2").delay(3400).animate({
@@ -59,10 +59,10 @@
   <section class="intro-section">
     <section class="container-fluid">
       <section class="intro row">
-        <div class="col-xxl-8">
+        <div class="col-xl-8">
           <img class="introImg" src="images/intropic.jpg" alt="">
         </div>
-        <div class="intro col-xl-4">
+        <div class="col-xl-4">
           <div id="div4" class="center-intro">
             <h1 id="h1-intro1" class="h1-intro">Winnie's</h1>
             <h1 id="h1-intro2" class="h1-intro">World</h1>
