--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <title>Winnie's World</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=EB+Garamond&family=Permanent+Marker&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=EB+Garamond&family=Permanent+Marker&display=swap"
+    rel="stylesheet">
 
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -57,22 +59,24 @@
 
   <!--Intro section -->
   <section class="intro-section">
-    <section class="container-fluid">
-      <section class="intro row">
-        <div class="col-xl-8">
-          <img class="introImg" src="images/intropic.jpg" alt="">
-        </div>
-        <div class="col-xl-4">
-          <div id="div4" class="center-intro">
-            <h1 id="h1-intro1" class="h1-intro">Winnie's</h1>
-            <h1 id="h1-intro2" class="h1-intro">World</h1>
-            <h4 class="h4-intro">dot</h4>
-            <h1 id="h1-introLg1">WORK</h1>
-            <h1 id="h1-introLg2"><a href="home.html" style="text-decoration: none;">Let's GO!</a></h1>
+    <div class="jumbotron vertical-center">
+      <div class="container-fluid">
+        <div class="intro row">
+          <div class="col-xl-8">
+            <img class="introImg" src="images/intropic.jpg" alt="">
+          </div>
+          <div class="col-xl-4">
+            <div id="div4" class="center-intro">
+              <h1 id="h1-intro1" class="h1-intro">Winnie's</h1>
+              <h1 id="h1-intro2" class="h1-intro">World</h1>
+              <h4 class="h4-intro">dot</h4>
+              <h1 id="h1-introLg1">WORK</h1>
+              <h1 id="h1-introLg2"><a href="home.html" style="text-decoration: none;">Let's GO!</a></h1>
+            </div>
           </div>
         </div>
-      </section>
-    </section>
+      </div>
+    </div>
   </section>
 
 </body>
