--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
         <video class="video" id="bVideo" controls>
             <source src="videos/test_1.mp4" type=video/mp4>
         </video>
-        <div id="playButton" class="playButton" onclick="playPause(); toggleFullscreen()"></div>
+        <!-- <div id="playButton" class="playButton" onclick="playPause(); toggleFullscreen()"></div> -->
     </div>
 
 
