(message)Initial Commit

--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=EB+Garamond&family=Permanent+Marker&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
 
 
     <!-- CSS Stylesheets -->
@@ -35,12 +37,15 @@
 
 </header>
 
-<body>
+<body id="body">
+
+    <audio src=""></audio>
 
 
     <!-- Title Section -->
     <section class="title-section">
         <h2 class="h2-title">Winnie's World</h2>
+        <!-- <img id="introImg" src="images/ww.jpg" alt=""> -->
     </section>
 
 
@@ -56,9 +61,9 @@
                     <div class=" collapse navbar-collapse" id="navbarSupportedContent">
 
                         <ul class="navbar-nav ml-auto margin-right: auto">
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="home.html">Home</a>
-                            </li>
+                            </li> -->
                             <li class="nav-item">
                                 <a data-target="#myModalS" data-toggle="modal" class="nav-link"
                                     href="myModalS">Story</a>
@@ -100,7 +105,7 @@
                 <div class="feature-box col-lg-4">
                     <a class="feature-elements" title="">
                         <a href="sc.html">
-                            <img class="feature-pics" src="images/genfitness.jpg" alt="">
+                            <img class="feature-pics" src="images/sc.jpg" alt="">
                         </a>
                         <h1 class="featureH1">Strength & Conditioning</h1>
                         <hr>
@@ -110,7 +115,7 @@
                 <div class="feature-box col-lg-4">
                     <a class=" feature-elements" title="">
                         <a href="kb.html">
-                            <img class="feature-pics" src="images/kettlebell.jpeg" alt="">
+                            <img class="feature-pics" src="images/kb.jpg" alt="">
                         </a>
                         <h1 class="featureH1">Kettlebell Training</h1>
                         <hr>
@@ -120,7 +125,7 @@
                 <div class="feature-box col-lg-4"">
                     <a class=" feature-elements" title="">
                     <a href="em.html">
-                        <img class="feature-pics" src="images/pregnant.jpg" alt="">
+                        <img class="feature-pics" src="images/em.jpg" alt="">
                     </a>
                     <h1 class="featureH1">Expecting Mothers</h1>
                     <hr>
@@ -143,9 +148,9 @@
                         <h3>I come to You</h3>
                     </div>
                     <div class="card-body">
-                        <h2 class="price-text">$40 / hr</h2>
-                        <p>Must provide a safe location</p>
-                        <p>Additional 58 cents per mile</p>
+                        <h2 class="price-text">$100 / hr</h2>
+                        <p>A safe location must be provided</p>
+                        <p>Additional charges may apply depending on distance</p>
                         <form class="formbtn">
                             <button class="btnOutl btn btn-lg btn-block btn-outline-dark"
                                 formaction="tel:908-456-0440">Call
@@ -168,7 +173,7 @@
                         <h1 class="hlh1">COMING SOON!</h1>
                     </div>
                     <div class="card-body">
-                        <h2 class="price-text">$30 / hr</h2>
+                        <!-- <h2 class="price-text">$30 / hr</h2> -->
                         <p>It's a Virtual World!</p>
                         <p>Discount Pricing</p>
                         <form class="formbtn">
@@ -193,7 +198,7 @@
                     </div>
                     <div class="card-body">
                         <h2 class="price-text">$20 / workout</h2>
-                        <p>I write out weekly workouts tailored to your needs</p>
+                        <p>I write out daily workouts tailored to your needs</p>
                         <p>You do your workouts when you are able</p>
                         <form class="formbtn">
                             <button class="btn btn-lg btn-block btn-dark" formaction="tel:314-330-1290">Call or
