--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="audio.js" charset="utf-8"></script>
-  <script>y
+  <!-- <script>
     $(document).ready(function () {
       $("#h1-intro1").delay(500).animate({
         'opacity': '1'
@@ -52,17 +52,25 @@
         'opacity': '1'
       }, 1000);
     });
-  </script>
-
-  <!-- <script type="text/javascript">
-    window.onload = function () {
-      document.getElementById("my_audio").play();
-    }
   </script> -->
+
 </head>
 
 <body>
 
+  <!-- <audio src="audio/ES_A.mp3" id="my_audio" controls loop="loop" autoplay="autoplay">
+  </audio> -->
+
+  <div class="jumbo jumbotron d-flex align-items-center min-vh-100">
+    <div class="container text-center">
+      <div class="fade-in">
+        <a href="home.html"><img src="images/ww.jpg" class="img-fluid" alt="Responsive image"></a>
+    </div>
+    </div>
+  </div>
+
+
+  
 
 
   <!--Intro section -->
@@ -90,17 +98,9 @@
   </section> -->
 
 
-  <audio src="videos/ES_A.mp3" id="my_audio" loop="loop" autoplay="autoplay">
-  </audio>
+  
 
 
-  <div class="jumbo jumbotron my-auto">
-    <div class="fade-in">
-    <a href="home.html"><img src="images/ww.jpg" class="img-fluid" alt="Responsive image"></a>
-  </div>
-</div>
-
-  </div>
 
 </body>
 
