--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
 
     <!-- Title Section -->
     <section class="title-section">
-        <h2 class="h2-title">Winnie's World</h2>
+        <h2 class="h2-title">Miiro World</h2>
         <!-- <img id="introImg" src="images/ww.jpg" alt=""> -->
     </section>
 
@@ -104,21 +104,21 @@
             <div class="row">
                 <div class="feature-box col-lg-4">
                     <a class="feature-elements" title="">
-                            <img class="feature-pics" src="images/sc.jpg" alt="">
+                        <img class="feature-pics" src="images/sc.jpg" alt="">
                         <h1 class="featureH1">Strength & Conditioning</h1>
                     </a>
                 </div>
 
                 <div class="feature-box col-lg-4">
                     <a class=" feature-elements" title="">
-                            <img class="feature-pics" src="images/kb.jpg" alt="">
+                        <img class="feature-pics" src="images/kb.jpg" alt="">
                         <h1 class="featureH1">Kettlebell Training</h1>
                     </a>
                 </div>
 
                 <div class="feature-box col-lg-4"">
                     <a class=" feature-elements" title="">
-                        <img class="feature-pics" src="images/em.jpg" alt="">
+                    <img class="feature-pics" src="images/em.jpg" alt="">
                     <h1 class="featureH1">Expecting Mothers</h1>
                     </a>
                 </div>
@@ -143,9 +143,10 @@
                         <p>A safe location must be provided</p>
                         <p>Additional charges may apply depending on distance</p>
                         <form class="formbtn">
-                            <button class="btnOutl btn btn-lg btn-block btn-outline-dark"
-                                formaction="tel:908-456-0440">Call
-                                or Text</button>
+                            <a href="tel:908-660-0440">
+                                <button class="btnOutl btn btn-lg btn-block btn-outline-dark">Call or Text
+                                </button>
+                            </a>
                         </form>
                         <form class="formbtn">
                             <button class="btn btn-lg btn-block btn-dark"
@@ -168,10 +169,10 @@
                         <p>It's a Virtual World!</p>
                         <p>Discount Pricing</p>
                         <form class="formbtn">
-                            <button class="btnOutl btn btn-lg btn-block btn-outline-dark"
-                                formaction="tel:314-330-1290">Call
-                                or Text
-                            </button>
+                            <a href="tel:908-660-0440">
+                                <button class="btnOutl btn btn-lg btn-block btn-outline-dark">Call or Text
+                                </button>
+                            </a>
                         </form>
                         <form class="formbtn">
                             <button class="btn btn-lg btn-block btn-dark"
