--- a/home.html
+++ b/home.html
@@ -84,6 +84,13 @@
         </nav>
     </section>
 
+    <!-- Pic Div -->
+
+    <!-- <section">
+    <div class="pic-div">
+        <img" src="images/mwlarge.jpg" alt="">
+    </div>
+</section> -->
 
 
     <!-- Video Div -->
